<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bentahsin</groupId>
    <artifactId>BenthKese-Parent</artifactId>
    <version>1.0.4</version>
    <packaging>pom</packaging>

    <modules>
        <module>benthkese-common</module>
        <module>benthkese-bukkit</module>
        <module>benthkese-folia</module>
        <module>benthkese-dist</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- Spigot API -->
            <dependency>
                <groupId>org.spigotmc</groupId>
                <artifactId>spigot-api</artifactId>
                <version>1.20.1-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
            <!-- Folia API -->
            <dependency>
                <groupId>dev.folia</groupId>
                <artifactId>folia-api</artifactId>
                <version>1.20.1-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
            <!-- Vault -->
            <dependency>
                <groupId>com.github.MilkBowl</groupId>
                <artifactId>VaultAPI</artifactId>
                <version>1.7</version>
                <scope>provided</scope>
            </dependency>
            <!-- Common Module -->
            <dependency>
                <groupId>com.bentahsin</groupId>
                <artifactId>benthkese-common</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
